--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-B2SKGC3NMR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-B2SKGC3NMR');
+</script>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EMR Assistant to Copy-Paste & Automate Medical Notes, Summaries, Analysis, Communication & More...</title>
+    <title>ChartWitch: About Us</title>
     <meta property="og:image" content="../static/OG_Logo_Share.jpg" />
-    <meta property="og:title" content="EMR Assistant to Copy-Paste & Automate Medical Notes, Summaries, Analysis, Communication & More..." />
+    <meta property="og:title" content="ChartWitch: About Us" />
     <meta property="og:description" content="Revolutionize & Accelerate your Clinical Notes & Decisions with this HIPAA-Compliant Desktop App" />
     
     <!-- Preconnect to third-party domains -->
@@ -534,6 +544,7 @@
     <script src="{{ url_for('static', filename='landing.js') }}" defer></script>
 </body>
 </html>
+
 
 
 
