--- a/templates/landing.html
+++ b/templates/landing.html
@@ -466,9 +466,9 @@
                         <a href="/pricing" class="secondary-btn">View Pricing</a>
                     </div>
                 </div>
-                <div class="hero-image">
+            <!-- <div class="hero-image">
                     <img src="{{ url_for('static', filename='hero-image.svg') }}" alt="Medical notes automation" width="500" height="350">
-                </div>
+                </div> -->
             </div>
 
             <div id="features" class="features-section">
