--- a/templates/signup.html
+++ b/templates/signup.html
@@ -204,6 +204,11 @@
             opacity: 1;
             cursor: pointer;
         }
+
+        .image-container {
+            filter: drop-shadow(0px 5px 6px #000000);
+        }
+    
     </style>
 </head>
 <body>
