--- a/templates/landing.html
+++ b/templates/landing.html
@@ -604,7 +604,7 @@
                 <div class="footer-logo">
                     <div class="logo-container">
                         <img src="{{ url_for('static', filename='logo-dark.svg') }}" alt="ChartWitch Logo" class="logo dark-mode-logo" width="150" height="35">
-                        <img src="{{ url_for('static', filename='logo-light.svg') }}" alt="ChartWitch Logo" class="logo light-mode-logo" width="150" height="35">
+                        <img src="{{ url_for('static', filename='logo-dark.svg') }}" alt="ChartWitch Logo" class="logo light-mode-logo" width="150" height="35">
                     </div>
                     <p>Copy-Paste & Automate</p>
                 </div>
