--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -499,7 +499,7 @@
                 <div class="footer-logo">
                     <div class="logo-container">
                         <img src="{{ url_for('static', filename='logo-dark.svg') }}" alt="ChartWitch Logo" class="logo dark-mode-logo" width="150" height="35">
-                        <img src="{{ url_for('static', filename='logo-light.svg') }}" alt="ChartWitch Logo" class="logo light-mode-logo" width="150" height="35">
+                        <img src="{{ url_for('static', filename='logo-dark.svg') }}" alt="ChartWitch Logo" class="logo light-mode-logo" width="150" height="35">
                     </div>
                     <p>Copy-Paste & Automate</p>
                 </div>
@@ -544,6 +544,7 @@
     <script src="{{ url_for('static', filename='landing.js') }}" defer></script>
 </body>
 </html>
+
 
 
 
