--- a/templates/signup.html
+++ b/templates/signup.html
@@ -249,8 +249,10 @@
                         <option value="md">MD</option>
                         <option value="do">DO</option>
                         <option value="mbbs">MBBS</option>
-                        <option value="cmp">CMP</option>
+                        <option value="cnp">CNP</option>
                         <option value="pa">PA</option>
+                        <option value="pa">RN</option>
+                        <option value="pa">Other</option>
                     </select>
                 </div>
                 <div class="input-group">
@@ -263,6 +265,7 @@
                         <option value="nurse">Nurse</option>
                         <option value="nurse_practitioner">Nurse Practitioner</option>
                         <option value="physician_assistant">Physician Assistant</option>
+                        <option value="physician_assistant">Other</option>
                     </select>
                 </div>
                 <div class="input-group">
