Update CSP headers landing.html

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://www.googletagmanager.com https://fonts.gstatic.com https://cdnjs.cloudflare.com https://fonts.googleapis.com https://cdnjs.cloudflare.com https://www.youtube.com">
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-B2SKGC3NMR"></script>
 <script>
@@ -493,7 +495,7 @@
                         <i class="fas fa-clipboard-list"></i>
                         <i class="fa-solid fa-notes-medical"></i>
                         <h3>Discharge Summaries</h3>
-                        <p>Instantly create Discharge Summaries from progress notes</p>
+                        <p>Instantly create Discharge Summaries from progress notes - no more delinquent records !</p>
                     </div>
                     <div class="feature-card">
                         <i class="fas fa-broom"></i>
@@ -549,7 +551,7 @@
                             <div class="step-number">4</div>
                             <div class="step-content">
                                 <h3>Get Your Results</h3>
-                                <p>Review the polished results generateed in seconds! </p>
+                                <p>Review the polished results generated in seconds! </p>
                             </div>
                         </div>
                     </div>
