--- a/templates/index.html
+++ b/templates/index.html
@@ -97,13 +97,13 @@
         <div class="tab-content">
             <!-- Documentation Tools Container -->
             <div id="documentation-tools-container" class="tab-pane active">
-                <button class="action-button" data-action="short_signout" data-tooltip="Creates a concise signout note from your medical text">Signout</button>
+                <button class="action-button" data-action="short_signout" data-tooltip="Create a concise signout note from your medical text">Signout</button>
                 <button class="action-button" data-action="hospital_summary" data-tooltip="Generates a comprehensive hospital summary from your notes">Hospital Course</button>
                 <button class="action-button" data-action="cleanup" data-tooltip="Cleans and organizes your medical notes for better readability">Note Clean-Up</button>
-                <button class="action-button" data-action="impression_ap" data-tooltip="Creates impression and assessment/plan sections from your notes">Assessment/Plan</button>
+                <button class="action-button" data-action="impression_ap" data-tooltip="Create an Impression, Assessment & Plan section from your notes">Assessment/Plan</button>
                 <button class="action-button" data-action="discharge_summary" data-tooltip="Creates a structured discharge summary from patient information">Discharge Summary</button>
-                <button class="action-button" data-action="diagnoses" data-tooltip="Identifies and lists all diagnoses from your medical notes">Billable Diagnoses</button>
-                <button class="action-button" data-action="history_physical" data-tooltip="You are an experienced doctor. Create a concise history and physical document from the patient information provided to the best of your ability. If relevant information it missing , can insert can the most likely clinical scenario">History & Physical</button>
+                <button class="action-button" data-action="diagnoses" data-tooltip="Identify & lists all diagnoses from your medical notes">Billable Diagnoses</button>
+                <button class="action-button" data-action="history_physical" data-tooltip="Create a concise H & P from provided information">History & Physical</button>
             </div>
             
             <!-- Diagnostics Tools Container -->
@@ -118,7 +118,7 @@
             <div id="analytics-tools-container" class="tab-pane">
                 <button class="action-button" data-action="cut_readmission" data-tooltip="Identifies factors to reduce readmission risk">Cut Hospitalization Risk</button>
                 <button class="action-button" data-action="emergencies" data-tooltip="Analyzes notes to predict potential emergencies or complications">Predict Emergencies</button>
-                <button class="action-button" data-action="malpractice_risk" data-tooltip="You are an experienced doctor. create a short list of top 5 possibitilities of malpractice risks for the medical provider in the context of provided patient information">Malpractice Risk</button>
+                <button class="action-button" data-action="malpractice_risk" data-tooltip="You are an experienced doctor. create a short list of top 5 possibilities of malpractice risks for the medical provider in the context of provided patient information">Malpractice Risk</button>
                 <button class="action-button" data-action="improve_care" data-tooltip="You are an experienced doctor. Please create a short list of suggestions to improve the quality of my clinical care based on latest clinical guideliness">Improve My Care</button>
                 <button class="action-button" data-action="prognosis" data-tooltip="You are an experienced doctor. Please provide prognostic information in short in the context of provided information. output should be less than 250 words">Prognosis</button>
             </div>
