--- a/templates/landing.html
+++ b/templates/landing.html
@@ -479,12 +479,12 @@
                     <div class="feature-card">
                         <i class="fas fa-file-medical"></i>
                         <h3>Signouts</h3>
-                        <p>Generate concise signout notes to use for patient hand-off</p>
+                        <p>Generate short & actionable signout notes to use for patient hand-off</p>
                     </div>
                      <div class="feature-card">
                         <i class="fa-solid fa-notes-medical"></i>
                         <h3>H & P</h3>
-                        <p>Create a History & Physical quicky using ER & Transfer Notes</p>
+                        <p>Create a History & Physical quicky using ER and Transfer Notes</p>
                     </div>
                     <div class="feature-card">
                         <i class="fas fa-hospital"></i>
@@ -492,9 +492,13 @@
                         <p>Generate a chronological & logical hospital course summary for your patient </p>
                     </div>
                     <div class="feature-card">
+                        <i class="fa-solid fa-arrows-spin"></i>
+                        <h3>Clinical Event Flowchart</h3>
+                        <p>Generate a timeline flowchart of main clinical events of your patient. <br> ED with Dysppnea 7/15/25 -->  EKG : AFib - RVR --> CXR : Pneumonia --> Lopressor, Antibx --> Resolved 7/16/25 </p>
+                    </div>
+                    <div class="feature-card">
                         <i class="fas fa-clipboard-list"></i>
-                        <i class="fa-solid fa-notes-medical"></i>
-                        <h3>Discharge Summaries</h3>
+                       <h3>Discharge Summaries</h3>
                         <p>Instantly create Discharge Summaries from progress notes - no more delinquent records !</p>
                     </div>
                     <div class="feature-card">
