--- a/templates/landing.html
+++ b/templates/landing.html
@@ -493,8 +493,8 @@
                     </div>
                     <div class="feature-card">
                         <i class="fa-solid fa-arrows-spin"></i>
-                        <h3>Clinical Event Flowchart</h3>
-                        <p>Generate a timeline flowchart of main clinical events of your patient. <br> ED with Dysppnea 7/15/25 -->  EKG : AFib - RVR --> CXR : Pneumonia --> Lopressor, Antibx --> Resolved 7/16/25 </p>
+                        <h3>Clinical Event Flow</h3>
+                        <p>Generate a timeline flowchart of main clinical events of your patient </p>
                     </div>
                     <div class="feature-card">
                         <i class="fas fa-clipboard-list"></i>
