--- a/templates/landing.html
+++ b/templates/landing.html
@@ -489,12 +489,12 @@
                     <div class="feature-card">
                         <i class="fas fa-hospital"></i>
                         <h3>Hospital Course</h3>
-                        <p>Generate a chronological & logical hospital course summary for your patient </p>
+                        <p>Generate a chronological & logical hospital course summary</p>
                     </div>
                     <div class="feature-card">
-                        <i class="fa-solid fa-arrows-spin"></i>
+                        <i class="fa-regular fa-arrows-spin"></i>
                         <h3>Clinical Event Flow</h3>
-                        <p>Generate a timeline flowchart of main clinical events of your patient </p>
+                        <p>Generate a timeline flowchart of main clinical events</p>
                     </div>
                     <div class="feature-card">
                         <i class="fas fa-clipboard-list"></i>
