--- a/templates/landing.html
+++ b/templates/landing.html
@@ -492,7 +492,8 @@
                         <p>Generate a chronological & logical hospital course summary</p>
                     </div>
                     <div class="feature-card">
-                        <i class="fa-regular fa-arrows-spin"></i>
+                        <i class="fas fa-hospital"></i>
+                        <i class="fa-solid fa-arrow-right"></i>
                         <h3>Clinical Event Flow</h3>
                         <p>Generate a timeline flowchart of main clinical events</p>
                     </div>
