--- a/templates/payment.html
+++ b/templates/payment.html
@@ -55,11 +55,11 @@
     </style>
     <div class="container">
         <div class="payment-container">
-            <h1>Complete Your Registration</h1>
+            <h1 style="color: grey;">Payment Details</h1>
             
             <div class="plan-details">
-                <h2>Monthly Subscription</h2>
-                <div class="price">$6.99/month</div>
+                <h2 style="color: grey;">Monthly Subscription</h2>
+                <div class="price">Only $6.99/month!!</div>
                 <ul class="features">
                     <li>Secure Transaction</li>
                     <li>Basic & Advance features</li>
