--- a/templates/pricing.html
+++ b/templates/pricing.html
@@ -55,19 +55,18 @@
     </style>
     <div class="container">
         <div class="payment-container">
-            <h1>Complete Your Registration</h1>
+            <h1 style="color: grey;">Pricing Details</h1>
             
             <div class="plan-details">
-                <h2>Monthly Subscription</h2>
-                <div class="price">$6.99/month</div>
+                <h2 style="color: grey;">Monthly Billing : </h2>
+                <div class="price">Only $6.99/month !!</div>
                 <ul class="features">
                     <li>Secure Transaction</li>
                     <li>Basic & Advance features</li>
-                    <li>Future Updates</li>
-                    <li>HIPAA Compliance</li>
+                    <li>Includes Future Updates</li>
+                    <li>HIPAA Compliant</li>
                     <li>Cancel Anytime</li>
-                    <li>Priority Processing</li>
-                </ul>
+                 </ul>
             </div>
                 <div style="
                         display: flex;
