--- a/templates/pricing.html
+++ b/templates/pricing.html
@@ -55,10 +55,10 @@
     </style>
     <div class="container">
         <div class="payment-container">
-            <h1 style="color: grey;">Pricing Details</h1>
+            <h1 style="color: white;">Pricing Details</h1>
             
             <div class="plan-details">
-                <h2 style="color: grey;">Monthly Billing : </h2>
+                <h2 style="color: white;">Monthly Billing : </h2>
                 <div class="price">Only $6.99/month !!</div>
                 <ul class="features">
                     <li>Secure Transaction</li>
