--- a/templates/pricing.html
+++ b/templates/pricing.html
@@ -59,13 +59,14 @@
             
             <div class="plan-details">
                 <h2 style="color: white;">Monthly Billing : </h2>
-                <div class="price">Only $6.99/month !!</div>
+                <div class="price">Only $6.99/month* !!</div>
                 <ul class="features">
                     <li>Secure Transaction</li>
                     <li>Basic & Advance features</li>
                     <li>Includes Future Updates</li>
                     <li>HIPAA Compliant</li>
                     <li>Cancel Anytime</li>
+                    <li>*Pricing does not include Sales & other applicable taxes</li>
                  </ul>
             </div>
                 <div style="
