--- a/templates/faq.html
+++ b/templates/faq.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+    <meta http-equiv="Content-Security-Policy" frame-ancestors: self; script-src 'self' https://www.googletagmanager.com https://www.google-analytics.com https://fonts.gstatic.com https://cdnjs.cloudflare.com https://fonts.googleapis.com https://cdnjs.cloudflare.com https://www.youtube.com";>
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-B2SKGC3NMR"></script>
 <script>
