--- a/templates/landing.html
+++ b/templates/landing.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-    <meta http-equiv="Content-Security-Policy" frame-ancestors: self; script-src 'self' https://www.googletagmanager.com https://www.google-analytics.com https://fonts.gstatic.com https://cdnjs.cloudflare.com https://fonts.googleapis.com https://cdnjs.cloudflare.com https://www.youtube.com";>
+    <meta http-equiv="Content-Security-Policy" frame-ancestors: none; script-src 'self' https://www.googletagmanager.com https://www.google-analytics.com https://fonts.gstatic.com https://chartwitch.com https://cdnjs.cloudflare.com https://fonts.googleapis.com https://cdnjs.cloudflare.com https://www.youtube.com";>
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-B2SKGC3NMR"></script>
 <script>
