--- a/templates/payment.html
+++ b/templates/payment.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta http-equiv="Content-Security-Policy" frame-ancestors: none; script-src 'self' https://www.googletagmanager.com https://www.google-analytics.com https://fonts.gstatic.com https://chartwitch.com https://cdnjs.cloudflare.com https://fonts.googleapis.com https://cdnjs.cloudflare.com https://www.youtube.com;>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Complete Payment - ChartWitch</title>
