--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -475,7 +475,7 @@
 <h2>Designed by a clinician: </h2> <p>Designed by a practicing physician who understands the limitations of current EMRs & causes of healthcare burnout</p>
 
                     <div class="cta-buttons">
-                        <a href="/landing" class="primary-btn">Home</a>
+                        <a href="/" class="primary-btn">Home</a>
                         <a href="/faq" class="secondary-btn">FAQs</a>
                         <a href="/pricing" class="secondary-btn">View Pricing</a>
                     </div>
@@ -544,6 +544,7 @@
     <script src="{{ url_for('static', filename='landing.js') }}" defer></script>
 </body>
 </html>
+
 
 
 
