--- a/templates/landing.html
+++ b/templates/landing.html
@@ -519,6 +519,11 @@
                         <p>Identify billable diagnoses, Analyze & advise on inpatient v/s observation appropriateness</p>
                     </div>
                     <div class="feature-card">
+                        <<i class="fa-solid fa-gavel"></i>
+                        <h3>Malpractice Scan</h3>
+                        <p>Analyze & Screen your medical note for any malpractice risks</p>
+                   </div>                   
+                    <div class="feature-card">
                         <i class="fa-solid fa-plus"></i>
                         <h3>Regular Updates</h3>
                         <p>New smart features & capabilities will be added on a regular basis</p>
