--- a/templates/pricing.html
+++ b/templates/pricing.html
@@ -59,7 +59,7 @@
             
             <div class="plan-details">
                 <h2 style="color: white;">Monthly Billing : </h2>
-                <div class="price">Only $6.99/month* !!</div>
+                <div class="price" style="color: orange;">Only $6.99/month* !!</div>
                 <ul class="features">
                     <li>Secure Transaction</li>
                     <li>Basic & Advance features</li>
